...
                    android:layout_weight="2"
                    android:text="@string/bandFinderBandName"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/myBandFinderBandNameID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/myBandFinderBandName"
                    android:textSize="18sp" />
            </LinearLayout>
...
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:id="@+id/bandFinderButtonID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bandFinderButton"
                    android:textSize="18sp" />
            </LinearLayout>

...
