...
    <string name="myMusicianFinderLastName">Last Name</string>
    <string name="musicianFinderUserName">Username</string>
    <string name="myMusicianFinderUserName">Username</string>
    <string name="musicianFinderInstruments">Instrument</string>
    <string name="musicianFinderLevels">Level</string>
    <string name="musicianFinderButton">Find musician</string>
    <string name="you_must_enter_bandname_for_search">You must enter a band name to perform a search</string>
    <string name="you_must_fill_at_least_one_field">You must fill at least one field to perform a search</string>

    <string name="bandFinderTitle">Band finder</string>
    <string name="bandFinderBandName">Band name</string>
    <string name="myBandFinderBandName">Band name</string>
    <string name="bandFinderInstruments">Instrument</string>
...
