...
                android:text="@string/band_profile"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinnerBands"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_weight="1" />
        </LinearLayout>
...
                    android:layout_weight="2"
                    android:text="@string/bandName"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/etBandName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18sp" />
            </LinearLayout>
            <LinearLayout
...
